--- a/src/components/GlossaryEntry.astro
+++ b/src/components/GlossaryEntry.astro
@@ -8,8 +8,14 @@ const entry = await getEntry("glossary", id);
 
 <a class="tooltip" href={`/glossary/${id}`}>
   {text}
-  <span class="tooltiptext">
-    <span class="tooltip-title">{entry.data.title} - glossary definition</span>
-    <span class="tooltip-body">{entry.data.definition}</span>
-  </span>
+  {
+    entry && (
+      <span class="tooltiptext">
+        <span class="tooltip-title">
+          {entry.data.title} - glossary definition
+        </span>
+        <span class="tooltip-body">{entry.data.definition}</span>
+      </span>
+    )
+  }
 </a>
