--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -57,6 +57,7 @@ const {
       <Tags tags={tags} />
 
       <script
+        is:inline
         src="https://utteranc.es/client.js"
         repo="kimgrytoyr/stackinsider.dev"
         issue-term="pathname"
